project(pybind-arma-bug LANGUAGES CXX)
cmake_minimum_required(VERSION 3.20.0)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
if (WIN32)
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
endif()

add_library(mc SHARED mat_container.cpp)
add_library(dummy SHARED dummy.cpp)

find_package(Python3 COMPONENTS Interpreter Development)
add_subdirectory(pybind11)
pybind11_add_module(pymod MODULE pymod.cpp)

find_package(Armadillo "10.6" CONFIG REQUIRED)
# set(ARMA_USE_HDF5 OFF)
include_directories(${ARMADILLO_INCLUDE_DIRS})

# target_link_libraries(mc PUBLIC)
target_compile_definitions(pymod PUBLIC ARMA_EXTRA_DEBUG)
target_link_libraries(dummy PUBLIC ${ARMADILLO_LIBRARIES})
target_link_libraries(mc PUBLIC dummy)
# target_link_libraries(pymod PUBLIC mc)
target_link_libraries(pymod PUBLIC mc dummy)